<?xml version="1.0"?>
<package format="2">
  <name>cloudy</name>
  <version>1.6.7</version>
  <description>
    Tools to work with clouds.
  </description>

  <maintainer email="victor.victor@victor.fr">Victor VICTOR</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>laser_geometry</depend>
  
</package>
