<?xml version="1.0"?>
<package format="2">
  <name>heron_srvs</name>
  <version>0.0.0</version>
  <description>The heron_srvs package</description>

  <maintainer email="victor@todo.todo">victor</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
